Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/CI_ParametroLote__c.object-meta.xml
<CustomObject>
    <label>Parámetro por Lote</label>
    <nameField>
        <displayFormat>PLT# {YYYY}{MM}-{0000000000}</displayFormat>
        <label>Codigo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parametros por Lotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>