Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_ClaveParametro__c.field-meta.xml
<CustomField>
    <fullName>CI_ClaveParametro__c</fullName>
    <label>Clave Parámetro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>