Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_CodigoExtLote__c.field-meta.xml
<CustomField>
    <fullName>CI_CodigoExtLote__c</fullName>
    <label>Código Lote</label>
    <length>6</length>
    <type>Text</type>
</CustomField>