Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_Lote__c.field-meta.xml
<CustomField>
    <fullName>CI_Lote__c</fullName>
    <label>Lote</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Parametros por Lotes</relationshipLabel>
    <relationshipName>ParametrosLotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>