Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_Manzana__c.field-meta.xml
<CustomField>
    <fullName>CI_Manzana__c</fullName>
    <label>Manzana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>