Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_PrecioM2__c.field-meta.xml
<CustomField>
    <fullName>CI_PrecioM2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Precio M2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>