Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_TipoBien__c.field-meta.xml
<CustomField>
    <fullName>CI_TipoBien__c</fullName>
    <label>Tipo Bien</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Departamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>