Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_TipoParametro__c.field-meta.xml
<CustomField>
    <fullName>CI_TipoParametro__c</fullName>
    <label>Tipo Parámetro</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Categoria</fullName>
            </value>
            <value>
                <fullName>Tipo Financiamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>