Inmob-Salesforce/force-app/main/default/objects/CI_ParametroLote__c/fields/CI_ValorAdicional__c.field-meta.xml
<CustomField>
    <fullName>CI_ValorAdicional__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>